add status handler
